supposed to have fixed the reasons section but none of it is aligning correctly no matter what I try and I did everything like in the video LOL

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,6 @@ nav{
 
 /*Main */
 main{
-    background-color: lightblue;
     /* make main element take up surplus space to push the footer down*/
     flex: 1 0 auto;
     margin-top: 47px;
@@ -135,7 +134,8 @@ main{
         line-height: 20px;
         margin-bottom: 20px;
 }
-#benefits p{
+
+#benefits p {
         padding:0 20px;
 }   
 #benefits hr {
@@ -153,12 +153,12 @@ main{
     max-height: 300px;
 }
 
-#benefits-image{
+#benefits-image {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
+    
 /*Footer */
 #social-networks {
     text-align: center;
@@ -224,14 +224,10 @@ main{
         width: 100%;
     }
 
-    #benefits-physical > div, 
-    #benefits-mental > div {
-        width:75%
-    }
 
     #benefits-mental > div {
         text-align: end;
-        align-self: flex-end;
+        align-self: flex-end;  
     }
 }
 
@@ -243,10 +239,27 @@ main{
     }
 }
 
+   /* Larger devices (laptops and desktops, 1200 px and up) Reasons section*/
+   @media screen and (min-width: 1200px){
+    #benefits {
+        display: flex;
+        flex-direction: row;
+      }
+    #benefits > div {
+        flex: 1;
+    }
+    #benefits-image {
+        order: 0;
+    }
+    #benefits-mental { 
+        order: 1;
+    }
+    #benefits-mental > div {
+        align-self: flex-start;
+    }
+    #benefits-physical > div {
+        align-self: flex-end;
+    }
+}
 
-    /* Larger devices (laptops and desktops, 1200 px and up*/
-@media screen and (min-width: 1200px){
-        #benefit > div {
-            display:flex;
-            justify-content: space-evenly;
-        }
+
